package app.entities;

public class Materiale {
    private int vareNummer;
    private String navn;
    private String vare_beskrivelse;
    private String hjaelpe_tekst;
    private int laengde;
    private int bredde;
    private int hoejde;
    private int kost_pris;
    private int salgs_pris;
}
