@startuml
'https://plantuml.com/class-diagram


class Bruger{
- int BrugerId
- String fornavn
- String efternavn
- String email
- String password
}


class Materiale{
- int MaterialeId
- String navn
- String vareBeskrivelse
- String hjælpeTekst
- int længde
- int bredde
- int højde
}


class Stykliste{
- int userId
- ArrayList<Materiale> materialer
- int carportId
}
class Carport{
 - int carportId
 - int brugerId
 - String tagtype
 - int carportBredde
 - int carportLængde
 - int styklisteId
 - int pris
 - String status

}
class Main{
+ static void main()
}

class BrugerController{
+ static void login()
+ static void signup()
}
class CarportController{

}
class StyklisteController{
+ Stykliste createStykliste(List<Materiale> materialer, Carport carport)
}
class OrdrelinjeController{
}


class OrdrelinjeMapper{
    + List<Ordrelinje> getAllOrdrelinjer()

}
class CarportMapper{
    +List<Carport> getAllCarports()
    + Carport createCarport (int carportId, int BrugerId, int carportId, int pris)
    + void updateStatus(Carport carport, String status)
    + void deleteOrder(Carport carport)
    + List<Carport> getAllPaidOrders()
    + List <Carport> getAllUnPaidOrders()

}
class BrugerMapper{
+ static void login(String email, String password)
+ static void signup(String email, String password, String firstname, String lastname)
}
class StyklisteMapper{
}
class SendMail{
- String message
- String modtager
- String afsender
+ void SendMail(SendMail sendMail)
}


BrugerController --> Main
StyklisteController --> Main
CarportController --> Main
OrdrelinjeController --> Main
Bruger --> BrugerController
Bruger --> BrugerMapper

Stykliste --> StyklisteMapper
Stykliste  --> StyklisteController

Carport --> CarportMapper

Carport --> CarportController

Ordrelinje --> OrdrelinjeController
Ordrelinje --> OrdrelinjeMapper

Materiale --> Carport
Bruger --> Carport
Carport --> SendMail
SendMail --> Stykliste
Carport --> Stykliste



@enduml